<resources>
    <string name="app_name">Image Gallery Test</string>
    <string name="settings_text">Settings</string>
    <string name="add_folder_button_description">Opens folder selection dialog</string>
    <string name="folder_icon_description">A folder icon</string>
    <string name="more_columns_text">More Columns</string>
    <string name="less_columns_text">Less Columns</string>

    <!-- Preference Keys -->
    <string name="preference_key_folders_grid_columns_landscape">Key_Folders_Grid_Landscape</string>
    <string name="preference_key_folders_grid_columns_portrait">Key_Folders_Grid_Portrait</string>
    <string name="preference_key_files_grid_columns_landscape">Key_Files_Grid_Landscape</string>
    <string name="preference_key_files_grid_columns_portrait">Key_Files_Grid_Portrait</string>
    <!-- Preference Titles -->
    <string name="preference_category_title_presentation">Presentation</string>
    <string name="preference_title_folders_grid_columns_landscape">Columns in Folders grid (landscape)</string>
    <string name="preference_title_folders_grid_columns_portrait">Columns in Folders grid (portrait)</string>
    <string name="preference_title_files_grid_columns_landscape">Columns in Files grid (landscape)</string>
    <string name="preference_title_files_grid_columns_portrait">Columns in Files grid (portrait)</string>
    <!-- Preference Summaries -->

    <!-- Fragment Titles -->
    <string name="title_fragment_folders">Folders</string>
    <string name="title_fragment_preferences">Preferences</string>

    <string name="permission_read_storage_title">Permission required</string>
    <string name="permission_read_storage_message">Permission to read storage is required for this app.</string>
    <string name="file_icon_description">Image file preview</string>
    <string name="image_content_description">Displays an image</string>
</resources>